--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "singlepageapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mark199850.github.io/singlepageapp",
+  "homepage": "https://mark199850.github.io/SinglePageApp",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
